--- a/files/style.css
+++ b/files/style.css
@@ -123,3 +123,28 @@ hr{
 .darkMode #languages li{
     background-color: rgb(1, 81, 81);
 }
+
+
+#form{
+    display: block;
+    text-align: center;
+    width:fit-content ;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:5%;
+    padding: 20px;
+    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.7) ;
+    border-radius: 40px;
+    backdrop-filter: blur(1px);
+    background-color: lightgrey;
+    color:black;
+}
+.darkmode #form{
+    background-color: rgb(1, 81, 81);
+    color: white;
+}
+#form input, #form textarea{
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 10px;
+}
