--- a/files/style.css
+++ b/files/style.css
@@ -48,9 +48,24 @@ hr{
 
 #hiddenNav{
     margin-top:70px;
-    display: none;
     border: 2px solid black;
     padding: 30px;
+    width: 50vh;
+    height: 60vh;
+    position: fixed;
+    overflow:auto;
+    right: 10vh;
+    top: 0;
+    background-color: white;
+    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.7) ;
+    border-radius: 20px;
+    backdrop-filter: blur(1px);
+    display: none;
+    z-index: 100;
+}
+.darkMode #hiddenNav{
+    background-color: #696969;
+    color: white;
 }
 #navClose{
     float: right;
