--- a/files/style.css
+++ b/files/style.css
@@ -71,6 +71,17 @@ hr{
     float: right;
 }
 
+#externalLinks{
+    display:inline-block;
+    border: 2px solid black;
+    border-radius: 10px;
+    left: 0;
+}
+#externalLinks img{
+    width: 40px;
+    height: 40px;
+}
+
 #hiddenNav button{
     background-color: white;
     border: 2px solid lightgrey;
