--- a/files/style.css
+++ b/files/style.css
@@ -1,176 +1,199 @@
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-    line-height: 1.5;
-    scroll-behavior: smooth;
-    list-style: none;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    transition-duration: 0.8s;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  line-height: 1.5;
+  scroll-behavior: smooth;
+  list-style: none;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  transition-duration: 0.8s;
 }
-.darkMode{
-    background-color: #696969;
-    color: white;
+.darkMode {
+  background-color: #696969;
+  color: white;
 }
-#darkModeButton{
-    display: none;
+#darkModeButton {
+  display: none;
 }
 
-a:link, a:visited, a:hover, a:active { 
-    text-decoration: none; 
-    color: black;
+a:link, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: black;
 }
 .darkMode a {
-    color: white;
+  color: white;
 }
 
-hr{
-    border: none;
-    border-top: 3px double #333;
-    color: #333;
-    overflow: visible;
-    text-align: center;
-    height: 10px;
+hr {
+  border: none;
+  border-top: 3px double #333;
+  color: #333;
+  overflow: visible;
+  text-align: center;
+  height: 10px;
 }
 
-
-.header{
-    height:10vh;
-    padding: 2vh;
-    font-size:xx-large;
-    top:0;
-    left:0;
+.header {
+  height: 10vh;
+  padding: 2vh;
+  font-size: xx-large;
+  top: 0;
+  left: 0;
 }
-.menu{
-    float: right;
-}
-
-#hiddenNav{
-    margin-top:70px;
-    border: 2px solid black;
-    padding: 30px;
-    width: 50vh;
-    height: 60vh;
-    position: fixed;
-    overflow:auto;
-    right: 10vh;
-    top: 0;
-    background-color: white;
-    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.7) ;
-    border-radius: 20px;
-    backdrop-filter: blur(1px);
-    display: none;
-    z-index: 100;
-}
-.darkMode #hiddenNav{
-    background-color: #696969;
-    color: white;
-}
-#navClose{
-    float: right;
+.menu {
+  float: right;
 }
 
-#externalLinks{
-    display:inline-block;
-    border: 2px solid black;
-    border-radius: 10px;
-    left: 0;
+#hiddenNav {
+  margin-top: 70px;
+  border: 2px solid black;
+  padding: 30px;
+  width: 50vh;
+  height: 60vh;
+  position: fixed;
+  overflow: auto;
+  right: 10vh;
+  top: 0;
+  background-color: white;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.7);
+  border-radius: 20px;
+  backdrop-filter: blur(1px);
+  display: none;
+  z-index: 100;
 }
-#externalLinks img{
-    width: 40px;
-    height: 40px;
+.darkMode #hiddenNav {
+  background-color: #696969;
+  color: white;
 }
-
-#hiddenNav button{
-    background-color: white;
-    border: 2px solid lightgrey;
-}
-#hiddenNav button:hover{
-    background-color: lightgrey;
-}
-.darkMode #hiddenNav button{
-    background-color: #696969;
-    border: 2px solid white;
-    color: black;
-}
-.darkMode #hiddenNav button:hover{
-    background-color: white;
+#navClose {
+  float: right;
 }
 
-.content{
-    display: flex;
-    font-size:medium;
+#externalLinks {
+  display: inline-block;
+  border: 2px solid black;
+  border-radius: 10px;
+  left: 0;
 }
-.static{
-    width: 50%;
-    padding-left: 20px;
-    font-size: x-large;
+#externalLinks img {
+  width: 40px;
+  height: 40px;
 }
-#stick{
-    position: sticky;
-    top:40%;
-}
-.static li{
-    font-size:medium;
+.darkMode #externalLinks {
+  border: 2px solid white;
 }
 
-.break{
-    height:88vh;
+#hiddenNav button {
+  background-color: white;
+  border: 2px solid lightgrey;
 }
-.everything{
-    position:relative;
-    width: 100%;
-    height: 88vh;
-    overflow: auto;
-    scroll-snap-type: y mandatory;
+#hiddenNav button:hover {
+  background-color: lightgrey;
 }
-.scrollable{
-    width: 50%;
-    float: right;
-    padding-left: 25px;
-    padding-right: 25px;
-    border-left:2px solid black;
+.darkMode #hiddenNav button {
+  background-color: #696969;
+  border: 2px solid white;
+  color: black;
 }
-#screenSection{
-    width: 100%;
-    height: 100vh;
-    scroll-snap-align: start;
+.darkMode #hiddenNav button:hover {
+  background-color: white;
 }
 
-#languages li{
-    display: inline;
-    padding:15px;
-    background-color: lightgrey;
-    border-radius: 30px;
-    font-size: small;
-    font-stretch: ultra-expanded;
+.content {
+  display: flex;
+  font-size: medium;
+  z-index: 3;
 }
-.darkMode #languages li{
-    background-color: rgb(1, 81, 81);
+.static {
+  width: 50%;
+  padding-left: 20px;
+  font-size: x-large;
+}
+#stick {
+  position: sticky;
+  top: 40%;
+}
+.static li {
+  font-size: medium;
 }
 
+.break {
+  height: 88vh;
+}
+.everything {
+  position: relative;
+  width: 100%;
+  height: 88vh;
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+  z-index: 3;
+}
+.scrollable {
+  width: 50%;
+  float: right;
+  padding-left: 25px;
+  padding-right: 25px;
+  border-left: 2px solid black;
+}
+#screenSection {
+  width: 100%;
+  height: 100vh;
+  scroll-snap-align: start;
+}
 
-#form{
-    display: block;
-    text-align: center;
-    width:fit-content ;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:5%;
-    padding: 20px;
-    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.7) ;
-    border-radius: 40px;
-    backdrop-filter: blur(1px);
-    background-color: lightgrey;
-    color:black;
+#languages li {
+  display: inline;
+  padding: 15px;
+  background-color: lightgrey;
+  border-radius: 30px;
+  font-size: small;
+  font-stretch: ultra-expanded;
 }
-.darkmode #form{
-    background-color: rgb(1, 81, 81);
-    color: white;
+.darkMode #languages li {
+  background-color: rgb(1, 81, 81);
 }
-#form input, #form textarea{
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 10px;
+
+#form {
+  display: block;
+  text-align: center;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5%;
+  padding: 20px;
+  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.7);
+  border-radius: 40px;
+  backdrop-filter: blur(1px);
+  background-color: lightgrey;
+  color: black;
+}
+.darkmode #form {
+  background-color: rgb(1, 81, 81);
+  color: white;
+}
+#form input, #form textarea {
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.mouseHover {
+  position: relative;
+  z-index: 0;
+}
+
+.mouseHover::before {
+  content: '';
+  position: absolute;
+  left: var(--x);
+  top: var(--y);
+  width: var(--size);
+  height: var(--size);
+  background: radial-gradient(circle closest-side, pink, transparent);
+  transform: translate(-50%, -50%);
+  transition: width 0.2s ease, height 0.2s ease;
+}
+.mouseHover:hover::before {
+  --size: 200px;
 }
