--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -17,7 +17,7 @@
                             <a id="navClose" onclick="closeNav()">X</a>
                             <br>
                             <ul>
-                                <li><a href="index.html#aboutMe">About</a></li>
+                                <li><a href="index.html#aboutMe">About</a>ver</li>
                                 <li><a href="index.html#projects">Projects</a></li>
                                 <li><a href="index.html#contactMe">Contact</a></li>
                                 <br>
@@ -85,7 +85,8 @@
                             <div id="screenSection">
                                 <div id="contactMe">
                                     <br><br>
-                                    <form action="submit.php" method="POST" id="form">
+
+                                    <form action="contact.php" method="POST" id="form">
                                         <h3>Contact Me</h3>
                                         <p>Name</p> <input type="text" name="name" class="input">
                                         <p>Email</p> <input type="email" name="email" class="input">
