added link to index.php

--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -36,6 +36,7 @@
                         <div id="stick">
                             <h1><bold>Artur Pacut</bold></h1>
                             <h5>Computer Science Student</h5>
+                            <a href="api/index.php">Vercel database</a>
 
                             
 
