Hidden nav bar fade in
Started work on fade out

--- a/templates/src/index.html
+++ b/templates/src/index.html
@@ -3,18 +3,17 @@
     <head>
         <title>Artur Pacut</title>
         <link rel="stylesheet" href="style/style.css">
-
         
 
     </head>
     <body>
         <div class="container">
             <div class="header">
-                <a class="logo" href="index.html#start">AP</a>   
+                <a class="logo" href="index.html#start">AP</a>
                    <div class="menu">
                         <a id="navButton" onclick="openNav()">=</a>
                         <div id="hiddenNav">
-                            <a id="navClose" onclick="closeNav()">X</a>
+                            <a id="navClose" onclick="closeNav()">||</a>
                             <br>
                             <ul>
                                 <li><a href="index.html#aboutMe">About</a></li>
