--- a/templates/src/style/style.css
+++ b/templates/src/style/style.css
@@ -9,6 +9,8 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     transition-duration: 0.8s;
 }
+
+
 .darkMode{
     background-color: #696969;
     color: white;
@@ -70,18 +72,6 @@ hr{
 #navClose{
     float: right;
 }
-
-#externalLinks{
-    display:inline-block;
-    border: 2px solid black;
-    border-radius: 10px;
-    left: 0;
-}
-#externalLinks img{
-    width: 40px;
-    height: 40px;
-}
-
 #hiddenNav button{
     background-color: white;
     border: 2px solid lightgrey;
@@ -96,6 +86,24 @@ hr{
 }
 .darkMode #hiddenNav button:hover{
     background-color: white;
+}
+@media screen and (max-width:992px) {
+    #hiddenNav{
+        width: 20vh;
+        height: 30vh;
+        right: 2vh;
+    }
+}
+
+#externalLinks{
+    display:inline-block;
+    border: 2px solid black;
+    border-radius: 10px;
+    left: 0;
+}
+#externalLinks img{
+    width: 40px;
+    height: 40px;
 }
 
 .content{
@@ -139,12 +147,13 @@ hr{
 }
 
 #languages li{
-    display: inline;
+    display: inline-block;
     padding:15px;
     background-color: lightgrey;
     border-radius: 30px;
     font-size: small;
     font-stretch: ultra-expanded;
+    margin-bottom:10px;
 }
 .darkMode #languages li{
     background-color: rgb(1, 81, 81);
@@ -174,3 +183,8 @@ hr{
     border-radius: 10px;
     padding: 10px;
 }
+/* @screen and (max-width:992px) {
+    #form{
+        
+    }
+} */
